权限配置认证

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -65,7 +65,7 @@
             // layer.msg(JSON.stringify(data.field));
             $.post("/doLogin", data.field, function (res) {
                 if ('200' == res.code) {
-                    layer.alert(res.msg);
+                    location.href = "/index";
                 } else {
                     layer.alert(res.msg);
                 }
